# koszul-compass

./: .gitignore  README.md  pyproject.toml
reports/: atlas_gap_queue_post_cicy5256_benchmark_advancement.json  atlas_gap_queue_post_cicy5256_benchmark_advancement.md  atlas_gap_queue_post_cicy5256_benchmark_advancement_verification.json  cicy5256_gutall_benchmark_pool_engine_audit.json  cicy5256_gutall_benchmark_pool_engine_audit.md  cicy5256_gutall_benchmark_pool_engine_audit_verification.json  cicy5259_split_lift_report.json  cicy5259_split_lift_report.md  cicy6715_component_unresolved_envelope.json  cicy6715_component_unresolved_envelope.md  cicy6715_component_unresolved_envelope_verification.json  no_go_atlas_v0.json  no_go_atlas_v0.md  no_go_atlas_v0_verification.json  phenomenology_guided_q1_radius9_higher_degree_candidate_dossier.json  phenomenology_guided_q1_radius9_higher_degree_candidate_dossier.md  phenomenology_guided_q1_radius9_higher_degree_candidate_dossier_verification.json  phenomenology_guided_q1_radius9_representative_generation_replay_rollup.json  phenomenology_guided_q1_radius9_representative_generation_replay_rollup.md  phenomenology_guided_q1_radius9_representative_generation_replay_rollup_verification.json  phenomenology_guided_q1_radius9_representative_obstruction_escape_report.json  phenomenology_guided_q1_radius9_representative_obstruction_escape_report.md  phenomenology_guided_q1_radius9_representative_obstruction_escape_report_verification.json  phenomenology_guided_q1_radius9_selection_preserving_branch_scout.json  (+2 more)
src/string_theory/: cicy.py  (+10 more)
(+328 files in other folders)
